--- a/RTL-Legacy.css
+++ b/RTL-Legacy.css
@@ -46,7 +46,7 @@ aside#Desktop_PanelContainer_Id {
     width: -webkit-fill-available !important;
     min-width: calc(var(--left-sidebar-width)* 1px) !important;
     min-height: calc(var(--left-sidebar-width)* 1px) !important;
-    position: fixed;
+    position: absolute;
 }
 .Root__right-sidebar > [Aria-label="Queue"], [Aria-label="Friend Activity"] {
     min-inline-size: -webkit-fill-available;
@@ -133,3 +133,13 @@ button.encore-over-media-set.main-topBar-buddyFeed {
 /*RTL Cover Position & Aspect Ratio*/
 .hCImOEZCJwYaSy2r1Xgx {justify-content: flex-end;}
 .main-nowPlayingView-coverArtContainer.hCImOEZCJwYaSy2r1Xgx.pUIBQ9cykHKYx2A2ZIPA {aspect-ratio: 1;}
+
+/*Album Art on Canvas Video*/
+.hjyiWzPtKHn_5kCe9vyg .ylBRlfNqGnzVa4kjUQGP {opacity: 1; z-index: 1;}
+._q9LkNJJIpxoOkOFI2Nd {visibility: visible !important;}
+.spotify__container--is-desktop .hjyiWzPtKHn_5kCe9vyg.pUIBQ9cykHKYx2A2ZIPA {height: var(--left-sidebar-width); min-height: 16em !important; aspect-ratio: 1 !important;}
+.main-nowPlayingView-coverArtContainer.hjyiWzPtKHn_5kCe9vyg {aspect-ratio: 1 !important;}
+.ffFwfKcPDbmAPLXzxzKq[aria-label="Now playing view"] {height: calc(var(--left-sidebar-width)* 1.135px) !important; min-height: calc(var(--left-sidebar-width)* 1.15px) !important;}
+
+/*Share Button*/
+.main-watchFeed-shareButton {top: 10px;}
