Add custom background to now playing bar
Set the background of .main-nowPlayingBar-nowPlayingBar to use the --spice-main variable for improved theming.

--- a/RTL-Legacy.css
+++ b/RTL-Legacy.css
@@ -1,3 +1,7 @@
+/*Navbar Background Colour*/
+.main-nowPlayingBar-nowPlayingBar {
+    background: var(--spice-main);
+}
 .ugPGmh_iv4lIuZkY1ZnL, .main-buddyFeed-content {
     width: 280px;
     margin-bottom: 150px;
